IGNITE-20124 Cleanup.